force-app/main/default/objects/Affl_Mappings__c/Affl_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Affl Mappings</label>
</CustomObject>