force-app/main/default/objects/Affl_Mappings__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>The label of the Account record type that&apos;s being mapped.</description>
    <inlineHelpText>The label of the Account record type that&apos;s being mapped.</inlineHelpText>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>