force-app/main/default/objects/Affl_Mappings__c/fields/Auto_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Program_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</description>
    <inlineHelpText>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</inlineHelpText>
    <label>Auto Enrollment</label>
    <type>Checkbox</type>
</CustomField>