force-app/main/default/objects/Affl_Mappings__c/fields/Auto_Program_Enrollment_Role__c.field-meta.xml
<CustomField>
    <fullName>Auto_Program_Enrollment_Role__c</fullName>
    <description>The role to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</description>
    <inlineHelpText>The role to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</inlineHelpText>
    <label>Auto Enrollment Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>