force-app/main/default/objects/Affl_Mappings__c/fields/Primary_Affl_Field__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affl_Field__c</fullName>
    <description>The label of the Contact field that holds the value of the primary Account for this record type.</description>
    <inlineHelpText>The label of the Contact field that holds the value of the primary Account for this record type.</inlineHelpText>
    <label>Primary Affl Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>